force-app/main/default/objects/SmokeTestSecurityScore__c/SmokeTestSecurityScore__c.object-meta.xml
<!-- Data Classification: Confidential | FLS: Restricted to SmokeTest_Admin | Retention: 1 year | Purge: Database.emptyRecycleBin() -->
<CustomObject>
    <description>Stores pre/post deployment security health check scores captured via the Tooling API SecurityHealthCheck object. Data Classification: Confidential. Field-level security restricted to SmokeTest_Admin permission set. Retention: 1 year.</description>
    <label>Security Health Score</label>
    <nameField>
        <displayFormat>SEC-{0000}</displayFormat>
        <label>Security Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Health Scores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>