force-app/main/default/objects/SmokeTestSecurityScore__c/fields/AbsoluteThreshold__c.field-meta.xml
<CustomField>
    <fullName>AbsoluteThreshold__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. The minimum acceptable post-deployment security score (0-100). Sourced from SmokeTestConfig__mdt at execution time. Default: 80.</description>
    <label>Absolute Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>