force-app/main/default/objects/SmokeTestSecurityScore__c/fields/CheckedAt__c.field-meta.xml
<CustomField>
    <fullName>CheckedAt__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. UTC timestamp when the post-deployment security health check was performed via the Tooling API.</description>
    <label>Checked At</label>
    <type>DateTime</type>
</CustomField>