force-app/main/default/objects/SmokeTestSecurityScore__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <description>Lookup to the smoke test execution this security score is associated with. Lookup (not Master-Detail) because security scores are Confidential and must not cascade-delete when Internal-tier Execution records are purged.</description>
    <label>Execution</label>
    <referenceTo>SmokeTestExecution__c</referenceTo>
    <relationshipLabel>Security Health Scores</relationshipLabel>
    <relationshipName>SecurityScores</relationshipName>
    <type>Lookup</type>
</CustomField>