force-app/main/default/objects/SmokeTestSecurityScore__c/fields/IntegrationUser__c.field-meta.xml
<CustomField>
    <fullName>IntegrationUser__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. The dedicated read-only integration user under whose context the Tooling API SecurityHealthCheck query was executed.</description>
    <label>Integration User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Health Scores</relationshipLabel>
    <relationshipName>SecurityHealthScores</relationshipName>
    <type>Lookup</type>
</CustomField>