force-app/main/default/objects/SmokeTestSecurityScore__c/fields/PostDeploymentScore__c.field-meta.xml
<CustomField>
    <fullName>PostDeploymentScore__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. Security health score captured after all smoke test scenarios completed, compared against PreDeploymentScore__c and AbsoluteThreshold__c.</description>
    <label>Post-Deployment Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>