force-app/main/default/objects/SmokeTestSecurityScore__c/fields/PreDeploymentScore__c.field-meta.xml
<CustomField>
    <fullName>PreDeploymentScore__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. Security health score captured immediately before the smoke test suite began executing, used as the baseline for delta comparison.</description>
    <label>Pre-Deployment Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>