force-app/main/default/objects/SmokeTestSecurityScore__c/fields/RawResponse__c.field-meta.xml
<CustomField>
    <fullName>RawResponse__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. Full JSON response from the Tooling API SecurityHealthCheck query, stored for audit and debugging. Contains individual risk category scores. 131072 characters to accommodate complete API response payloads.</description>
    <label>Raw API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>