force-app/main/default/objects/SmokeTestSecurityScore__c/fields/RelativeThreshold__c.field-meta.xml
<CustomField>
    <fullName>RelativeThreshold__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. Maximum acceptable score drop (in points) from PreDeploymentScore__c to PostDeploymentScore__c. Sourced from SmokeTestConfig__mdt. Default: 5.</description>
    <label>Relative Threshold (points)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>