force-app/main/default/objects/SmokeTestSecurityScore__c/fields/RiskCategories__c.field-meta.xml
<CustomField>
    <fullName>RiskCategories__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. JSON-serialized list of security risk category names whose scores changed between the pre-deployment and post-deployment captures. Populated by SecurityScoreComparator.changedCategories.</description>
    <label>Risk Categories</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>