force-app/main/default/objects/SmokeTestSecurityScore__c/fields/ScoreDelta__c.field-meta.xml
<CustomField>
    <fullName>ScoreDelta__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. Formula field: PostDeploymentScore__c minus PreDeploymentScore__c. Null when either score is blank. Negative value indicates security posture degradation.</description>
    <formula>IF(OR(ISBLANK(PostDeploymentScore__c), ISBLANK(PreDeploymentScore__c)), NULL, PostDeploymentScore__c - PreDeploymentScore__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Delta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>