force-app/main/default/objects/SmokeTestSecurityScore__c/fields/ThresholdMet__c.field-meta.xml
<CustomField>
    <fullName>ThresholdMet__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. True when PostDeploymentScore__c meets or exceeds AbsoluteThreshold__c AND the score drop does not exceed RelativeThreshold__c. Set by SecurityHealthCheckService.</description>
    <defaultValue>false</defaultValue>
    <label>Threshold Met</label>
    <type>Checkbox</type>
</CustomField>