force-app/main/default/objects/SmokeTestSecurityScore__c/fields/ThresholdStatus__c.field-meta.xml
<CustomField>
    <fullName>ThresholdStatus__c</fullName>
    <description>Confidential: FLS restricted to SmokeTest_Admin. The outcome of the SecurityScoreComparator evaluation: Pass (both absolute and delta thresholds met), Fail (one or both thresholds violated), Error (capture or comparison failed), Skipped (check bypassed).</description>
    <label>Threshold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>